tests/should_fail/terminates/const.stderr
error: Mutually recursive functions: when calling `f`...
  --> const.rs:20:1
   |
20 | pub fn f() {
   | ^^^^^^^^^^
   |
note: `f` calls `C`...
  --> const.rs:21:28
   |
21 |     proof_assert!( let _ = C; false );
   |                            ^
note: finally `C` calls `f`.
  --> const.rs:14:29
   |
14 |     proof_assert! { let _ = f(); false };
   |                             ^

error: aborting due to 1 previous error

